--- a/main.tex
+++ b/main.tex
@@ -23,6 +23,7 @@
 
 % Additional packages I use
 \usepackage{breqn}
+\usepackage{multicol}
 
 % My Macros
 \newcommand{\set}[1]{\left \{ #1 \right \}}
@@ -31,6 +32,7 @@
 \newcommand{\ceil}[1]{\left \lceil #1 \right \rceil}
 \newcommand{\encoding}[1]{\left \langle #1 \right \rangle}
 \newcommand{\E}{\mathbb{E}}
+\newcommand{\R}{\mathbb{R}}
 \newcommand{\N}{\mathbb{N}}
 
 % Image directory
