--- a/main.tex
+++ b/main.tex
@@ -34,6 +34,7 @@
 \newcommand{\E}{\mathbb{E}}
 \newcommand{\R}{\mathbb{R}}
 \newcommand{\N}{\mathbb{N}}
+\newcommand{\C}{\mathcal{C}}
 
 % Image directory
 \graphicspath{ {./images/} }
